# excel-summary

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: manage.py
src/api/v1/: serializers.py  urls.py  views.py
src/config/: asgi.py  settings.py  urls.py
src/services/summarise_excel/: column_row_finder.py  exceptions.py  file_readers.py  row_converter.py  row_processors.py  summary_generator.py  value_processors.py
tests/: conftest.py
tests/test_api/test_v1/test_views/: test_excel_summary_view.py
tests/test_services/test_summarise_excel/: test_column_row_finder.py  test_file_readers.py  test_row_converter.py  test_row_processors.py  test_summary_generator.py  test_value_processors.py
